исправила ошибки